# agentvault

./: .gitignore  README.md  pyproject.toml
.github/workflows/: autonomous-core.yml  autonomous_loop.yml  ci.yml  nightly.yml  swarm_automerge.yml  vault_sync.yml
agent/: run.py
docs/: SETUP.md
index/: build_index.py
ops/: ACTIVE_CONTEXT_SNAPSHOT.md  PHASED_CONVERGENCE_PLAN.md  PREMOVE_CONTEXT_PROTOCOL.md  PROJECT_REGISTRY.md
swarm/: __init__.py  automerge.py
vault/: README.md  __init__.py  heartbeat.py  search.py  sync_agent.py
